--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="A test blog project exploring a variety of topics, created to practice web development and share interesting stories. Discover tech, lifestyle, and more!"
+    />
     <title>React Blog Api</title>
   </head>
   <body>
